force-app/main/default/objects/MAP_Budget__c/MAP_Budget__c.object-meta.xml
<CustomObject>
    <description>Marketing Activity Plan budget (BRD 4.8). Brand-level marketing budget; two-level approval; rolls up MAP Order spend; pushed to SAP after approval.</description>
    <label>MAP Budget</label>
    <nameField>
        <displayFormat>MAPB-{00000}</displayFormat>
        <label>MAP Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MAP Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>