force-app/main/default/objects/MAP_Budget__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>