force-app/main/default/objects/MAP_Budget__c/fields/Spent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spent_Amount__c</fullName>
    <description>Roll-up of approved MAP Order amounts.</description>
    <label>Spent Amount</label>
    <summarizedField>MAP_Order__c.Amount__c</summarizedField>
    <summaryForeignKey>MAP_Order__c.MAP_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>